--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=NinjaRegistration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+DB_CLOSE_ON_EXIT=FALSE
+DB_CLOSED_DELAY=1
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver=org.h2.Driver
+spring.datasource.username=register_db
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
