--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.h2.console.path=/h2-console
 
 DB_CLOSE_ON_EXIT=FALSE
 DB_CLOSED_DELAY=1
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver=org.h2.Driver
-spring.datasource.username=register_db
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
