--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=NinjaRegistration
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
 
 DB_CLOSE_ON_EXIT=FALSE
 DB_CLOSED_DELAY=1
@@ -9,5 +8,11 @@ spring.datasource.driver=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
