--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.application.name=NinjaRegistration
 
 DB_CLOSE_ON_EXIT=FALSE
 DB_CLOSED_DELAY=1
-spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver=org.h2.Driver
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +17,4 @@ spring.jpa.show-sql=true
 spring.flyway.enable=true
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
+
